[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Scenes/Gate-TrueEnd3.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Background.png" type="Texture" id=2]
[ext_resource path="res://Tilesets/TilesetMain.tres" type="TileSet" id=3]
[ext_resource path="res://Instances/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Instances/CellLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sounds/Music/SILENCE.wav" type="AudioStream" id=6]
[ext_resource path="res://Sprites/Props/End floor.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Items/Bug 1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Items/Bug 2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Items/Bug 3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Items/Bug 4.png" type="Texture" id=11]
[ext_resource path="res://Sounds/Characters/Teleport.wav" type="AudioStream" id=12]
[ext_resource path="res://Scripts/System/EffectAudio.gd" type="Script" id=13]
[ext_resource path="res://Sprites/Particles/Glitch.png" type="Texture" id=14]
[ext_resource path="res://Sounds/Ambient/Static temp.wav" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 83, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 63 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 5, 5 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 82, 74, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 0.550781, 0.462032, 0.408783, 1 )
hue_variation = 1.0
hue_variation_random = 1.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Gravity", "Hue Variation", "Initial Velocity" ]

[node name="Node2D" type="Node2D" groups=[
"TrueEnd3",
]]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( 80, 72 )
z_index = -4096
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 150, 144 )
_sections_unfolded = [ "Offset", "Region", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="UI" parent="." index="2" instance=ExtResource( 4 )]

[node name="CellLabel" parent="." index="3" instance=ExtResource( 5 )]

text = "??"
cell_index_x = -1
cell_index_y = -1
cell_music = ExtResource( 6 )

[node name="Walls" type="StaticBody2D" parent="." index="4"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls" index="0"]

position = Vector2( 80, 136 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls" index="1"]

position = Vector2( 80, -10 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls" index="2"]

position = Vector2( -10, 63 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls" index="3"]

position = Vector2( 170, 63 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="5"]

position = Vector2( 80, 72 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TheItem" type="AnimatedSprite" parent="." index="6"]

visible = false
position = Vector2( 80, 50 )
frames = SubResource( 3 )
animation = "default"
frame = 1
playing = true

[node name="EndArea" type="Area2D" parent="." index="7"]

position = Vector2( 80, 68 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea" index="0"]

shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="SoundHoldUp" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 0.8
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 13 )

[node name="TimerDialogue" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[node name="TimerTurnDown" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimerHoldUp" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="TimerCorruption" type="Timer" parent="." index="12"]

process_mode = 1
wait_time = 2.5
one_shot = true
autostart = false

[node name="GLITCHLAYER" type="CanvasLayer" parent="." index="13"]

layer = 25
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="PartsGLITCH" type="Particles2D" parent="GLITCHLAYER" index="0"]

position = Vector2( 80, 72 )
z_index = 4096
emitting = false
amount = 128
lifetime = 0.08
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 14 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Z Index" ]

[node name="GLITCH" type="Sprite" parent="GLITCHLAYER/PartsGLITCH" index="0"]

visible = false
modulate = Color( 0.429688, 0.429688, 0.429688, 1 )
position = Vector2( -2.5, 0.120003 )
scale = Vector2( 4.02273, 6.76 )
z_index = -50
texture = ExtResource( 14 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="SoundStatic" type="AudioStreamPlayer" parent="." index="14"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 13 )

[node name="TimerGlitch" type="Timer" parent="." index="15"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="body_entered" from="EndArea" to="." method="_on_EndArea_body_entered"]

[connection signal="timeout" from="TimerDialogue" to="." method="_on_TimerDialogue_timeout"]

[connection signal="timeout" from="TimerTurnDown" to="." method="_on_TimerTurnDown_timeout"]

[connection signal="timeout" from="TimerHoldUp" to="." method="_on_TimerHoldUp_timeout"]

[connection signal="timeout" from="TimerCorruption" to="." method="_on_TimerCorruption_timeout"]

[connection signal="timeout" from="TimerGlitch" to="." method="_on_TimerGlitch_timeout"]


